2000-07-04  Sven Neumann  <sven@gimp.org>

	* app/tips_dialog.c: corrected an error message 

	* tips/gimp_tips.it.txt: update from Daniele Medri <madrid@linux.it>

2000-07-04  Tor Lillqvist  <tml@iki.fi>

	* Makefile.am (SUBDIRS): Yes, there *is* a "build" directory. It's a
	virtual module included in gimp, see CVSROOT/modules. With older
	CVS clients you might need to do a recheckout to get it.

	* plug-ins/script-fu/script-fu.c (marshall_proc_db_call): On
	Windows, handle pending gtk events each time we come here,
	otherwise we easily get resource starvation in a long-running
	script. Thanks to Jean-Louis Hamel for this workaround. It's a
	hack, I don't exactly know why it is needed, but it sure helps a
	lot.

	* plug-ins/makefile.cygwin: Add some new unofficial plug-ins. Use
	macros from make.mingw.

	* libgimp/makefile.cygwin: Update with new object files.

	* libgimp/gimp.def: Add new entry points.

Fri Jun 30 22:09:11 BST 2000 Andy Thomas <alt@gimp.org>

	* plug-ins/common/iwarp.c

	Applied patch by Daniel Egger that fixes a problem when
	applying iwarp in animation mode. 

2000-06-30  Nick Lamb  <njl195@zepler.org.uk>

	* plug-ins/common/png.c: More options, offsets preserved on load

2000-06-27  Daniel Egger  <egger@suse.de>

	* libgimp/gimpexport.c: changed some words to lowercase
	
2000-06-27  Sven Neumann  <sven@gimp.org>

	* app/about_dialog.c: we used an array with a hardcoded size here 
	which was too small to hold all the authors recently added. Made 
	it a dynamic one. This fixes the "Can't quit The GIMP" bug #15483.

	* app/about_dialog.h
	* app/commands.c: removed the timeout parameter from 
	about_dialog_create() since it wasn't used at all.
	
Tue Jun 27 22:26:30 BST 2000 Andy Thomas <alt@gimp.org>

	* app/paint_core.c:

	Fixed problem with coloured brushes/grayscale images and painting
	close to the edge. Fixes bug #14159

2000-06-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/helpbrowser.c: simplified the